# CatgirlDownloader

./: .gitignore  README.md  catgirldownloader.flatpak  install.sh  meson.build  moe.Avelcius.furrydownloader.json  moe.furry.catgirldownloader.json  moe.nyarchlinux.catgirldownloader.json  nfpm.yaml  package.sh  python3-requests.json
.github/workflows/: release.yml
data/: meson.build  moe.Avelcius.furrydownloader.appdata.xml.in  moe.Avelcius.furrydownloader.desktop.in  moe.Avelcius.furrydownloader.gschema.xml  moe.furry.catgirldownloader.appdata.xml.in  moe.furry.catgirldownloader.desktop.in  moe.furry.catgirldownloader.gschema.xml  moe.nyarchlinux.catgirldownloader.appdata.xml.in  moe.nyarchlinux.catgirldownloader.desktop.in  moe.nyarchlinux.catgirldownloader.gschema.xml
data/icons/: meson.build
data/ui/: preferences.ui  window.ui
po/: POTFILES  meson.build
src/: api_base.py  catgirl.py  catgirldownloader.gresource.xml  catgirldownloader.in  danbooru.py  furrydownloader.in  main.py  meson.build  preferences.py  preferenceswindow.py  types.py  waifu.py  window.py
